...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/text_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Code" />

        <Button
            android:id="@+id/text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
...
