<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/element_spacing_normal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/item_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Large Text" />

        <Button
            android:id="@+id/button_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A" />

        <Button
            android:id="@+id/button_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
